# cerberus-vigil-experiment

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  run_experiment.py
.github/workflows/: reproduce.yml
docs/: CERBERUS_Stress_Suite_v1_Research_Plan.md  method.md
results/: monte_carlo_results.csv  summary.json
src/cerberus_vigil/: __init__.py  core.py  io.py
tests/: test_core.py
tools/: verify_results.py
