[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus-vigil-experiment"
version = "0.1.0"
description = "Reproducible synthetic experiment for runtime independence-decay detection"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Emily Echterhoff" }]
dependencies = [
  "numpy>=1.26,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
